config/envoy.basic.internal.yaml
# the basic envoy example modified to proxy to a host running in the same
# network as envoy

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 20000
static_resources:
  clusters:
  - name: service_egoserver
    connect_timeout: 1s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: egoserver
        port_value: 3000
  listeners:
  - name: egoserver
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: egoserver
                  cluster: service_egoserver
