config/envoy.failover.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19999
static_resources:
  clusters:
  - name: service_egoserver1
    connect_timeout: 1s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: egoserver1
        port_value: 3000
  - name: service_egoserver2
    connect_timeout: 1s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: egoserver2
        port_value: 3000
  - name: service_egoserver3
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment: 
      cluster_name: a
      endpoints:
      - priority: 1
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: egoserver3
                port_value: 3000
          metadata:
            filter_metadata:
              envoy.lb:
                key: egoserver3
      - priority: 2
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: egoserver2
                port_value: 3000
          metadata:
            filter_metadata:
              envoy.lb:
                key: egoserver3
      - priority: 3
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: egoserver1
                port_value: 3000
          metadata:
            filter_metadata:
              envoy.lb:
                key: egoserver3
    connect_timeout: 0.1s
    circuit_breakers:
      thresholds:
      - max_connections: 1
        max_pending_requests: 1
        max_requests: 1
        max_retries: 3
  - name: service_google
    connect_timeout: 1s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: google.com
        port_value: 443
    tls_context:
      sni: www.google.com
  listeners:
  - name: egoserver1
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
          route_config:
            virtual_hosts:
            - name: egoserver1_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_egoserver1  
  - name: egoserver2
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20002
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
          route_config:
            virtual_hosts:
            - name: egoserver2_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_egoserver2
  - name: egoserver3
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20003
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
          route_config:
            virtual_hosts:
            - name: egoserver3_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_egoserver3
  - name: google
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: www.google.com
                  cluster: service_google
